--- a/index.ipynb
+++ b/index.ipynb
@@ -413,7 +413,7 @@
     }
    ],
    "source": [
-    "city_count = list(cities)\n",
+    "city_count = list(cities[])\n",
     "city_count # 12"
    ]
   },
