Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -387,7 +387,7 @@
     }
    ],
    "source": [
-    "city_count = len(li)\n",
+    "city_count = len(list(cities))\n",
     "city_count # 12"
    ]
   },
